# jira-clarifier

./: .gitignore  architecture.mermaid  fine_tune.py  funnel.mermaid  init-pinecone.sh  main.py  pyproject.toml  setup-env.sh  startup.md
jira-clarifier-backend/: jira_clarify_50.jsonl  pinecone.py  pyproject.toml  railway.toml  requirements.txt
jira-clarifier-backend/jira_clarifier_backend/: main.py
jira-clarifier-forge/src/frontend/: index.jsx
jira-clarifier-forge/src/resolvers/: index.js
jira-clarifier-web/: package-lock.json  package.json
jira-clarifier-web/app/: page.tsx
jira-clarifier-web/app/api/stripe/create-checkout/: route.ts
jira-clarifier-web/app/checkout/: page.tsx
jira-clarifier-web/app/checkout/cancel/: page.tsx
jira-clarifier-web/app/checkout/success/: page.tsx
jira-clarifier-web/app/login/: page.tsx
jira-clarifier-web/app/signup/: page.tsx
jira_clarifier_forge/: manifest.yml  package-lock.json  package.json  readme.md
jira_clarifier_forge/src/: index.jsx  resolver.js
web/: index.html
