[project]
name = "jira-clarifier"
version = "0.1.0"
description = ""
authors = [
    {name = "tjgersho",email = "tjgersho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pinecone-client (>=6.0.0,<7.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "openai (>=2.8.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "pinecone (>=7.3.0,<8.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "stripe (>=13.2.0,<14.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
