[project]
name = "jira-clarifier-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "tjgersho",email = "tjgersho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "anthropic (>=0.73.0,<0.74.0)",
    "pinecone (>=7.3.0,<8.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "stripe (>=13.2.0,<14.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
